--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -33,7 +33,7 @@ body {
 .login-container button {
   width: 100%;
   padding: 10px;
-  background-color: #5cb85c;
+  background-color: #66cc33;
   color: #ffffff;
   font-weight: bold;
   border: none;
@@ -42,7 +42,7 @@ body {
 }
 
 .login-container button:hover {
-  background-color: #449d44;
+  background-color: #66cc33
 }
 
 .error-message {
@@ -60,7 +60,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #5cb85c;
+  background-color: #66cc33;
   color: #ffffff;
 }
 
@@ -77,14 +77,14 @@ button:hover {
   color: #ffffff;
   text-decoration: none;
   padding: 10px;
-  background-color: #5cb85c;
+  background-color: #66cc33;
   border: 2px solid #ffffff;
   border-radius: 4px;
   cursor: pointer;
 }
 
 .logout-button a:hover {
-  background-color: #449d44;
+  background-color: #66cc33
 }
 
 .container {
@@ -116,6 +116,7 @@ button:hover {
   padding: 10px;
   background-color: #ccc;
   min-height: 650px;
+  border: 1px solid #66cc33;
 }
 
 .create-account-form {
@@ -123,6 +124,11 @@ button:hover {
   flex-direction: column;
   flex: 0 0 50%;
   padding: 10px;
+}
+
+input {
+  border: 1px solid #66cc33;
+  padding: 8px 6px;
 }
 
 .update-form label,
@@ -133,14 +139,17 @@ button:hover {
 .create-account-form textarea {
   display: block;
   margin-bottom: 20px;
-  width: 95%;
+  width: 90%;
 }
 
 textarea {
   height: 350px;
+  border: 1px solid #66cc33;
+  padding: 8px 6px;
 }
 
-.cron-feed-addresses button {
+.cron-feed-addresses button,
+.logout-button button {
   padding: 10px;
   border: none;
   border-radius: 4px;
@@ -164,7 +173,7 @@ textarea {
 
 .update-button,
 .add-account-button {
-  background-color: #5cb85c;
+  background-color: #66cc33;
   color: #ffffff;
 }
 
@@ -185,7 +194,7 @@ textarea {
 
 .update-button:hover,
 .add-account-button:hover {
-  background-color: #449d44;
+  background-color: #66cc33
 }
 
 .delete-button:hover {
@@ -202,6 +211,7 @@ textarea {
 
 .cron-feed-addresses {
   padding: 10px;
+  border-top: 2px solid #66cc33;
 }
 
 .statuses {
@@ -228,7 +238,7 @@ textarea {
 }
 
 footer {
-  background-color: #5cb85c;
+  background-color: #66cc33;
   color: #ffffff;
   padding: 10px 20px;
   text-align: center;
@@ -251,5 +261,6 @@ footer {
   .account-box {
     width: 100%;
     flex: unset;
+    margin: 0;
   }
 }
