--- a/root/public/assets/styles.css
+++ b/root/public/assets/styles.css
@@ -4,7 +4,27 @@ body {
   padding: 0;
   overflow-x: hidden;
   width: 100%;
+  background-image: url(/assets/background-marble.png);
+  background-repeat: repeat;
   background-color: #f0f0f0;
+}
+
+.logo img {
+  height: auto;
+  width: 350px;
+}
+
+.account-popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #ffffff;
+  border-radius: 4px;
+  z-index: 1000;
 }
 
 /* Login Page */
@@ -30,21 +50,6 @@ body {
   border-radius: 4px;
 }
 
-.login-container button {
-  width: 100%;
-  padding: 10px;
-  background-color: #66cc33;
-  color: #ffffff;
-  font-weight: bold;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.login-container button:hover {
-  background-color: #66cc33
-}
-
 .error-message {
   color: #a94442;
   background-color: #f2dede;
@@ -60,43 +65,22 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #66cc33;
+  background-color: #0366d6;
   color: #ffffff;
-}
-
-button {
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: box-shadow 0.3s;
-}
-
-button:hover {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.logout-button a {
-  color: #ffffff;
-  text-decoration: none;
-  padding: 10px;
-  background-color: #66cc33;
-  border: 2px solid #ffffff;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.logout-button a:hover {
-  background-color: #66cc33
 }
 
 .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  min-height: 90vh;
 }
 
 .account-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  min-height: 750px;
 }
 
 .account-box {
@@ -104,6 +88,7 @@ button:hover {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   margin: 20px;
+  max-height: 750px;
   position: relative;
   flex-wrap: wrap;
   flex: 0 0 calc(50% - 40px);
@@ -139,7 +124,7 @@ input {
 .create-account-form textarea {
   display: block;
   margin-bottom: 20px;
-  width: 90%;
+  width: 95%;
 }
 
 textarea {
@@ -148,59 +133,63 @@ textarea {
   padding: 8px 6px;
 }
 
-.cron-feed-addresses button,
-.logout-button button {
+button {
+  color: #ffffff;
   padding: 10px;
   border: none;
   border-radius: 4px;
   font-weight: bold;
   cursor: pointer;
-  background-color: #d9534f;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s;
+}
+
+button:hover {
   color: #ffffff;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .update-button,
 .add-account-button,
-.delete-button,
-.generate-button,
-.delete-status-button {
-  padding: 10px;
-  border: none;
-  border-radius: 4px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.update-button,
-.add-account-button {
+.login-container button {
   background-color: #66cc33;
-  color: #ffffff;
 }
 
-.delete-button {
+button#close-popup-btn,
+.delete-button,
+.cron-feed-addresses button,
+.logout-button button {
   background-color: #d9534f;
-  color: #ffffff;
 }
 
+button#add-account-btn,
 .generate-button {
   background-color: #337ab7;
-  color: #ffffff;
 }
 
 .delete-status-button {
   background-color: #f0ad4e;
-  color: #ffffff;
 }
 
 .update-button:hover,
-.add-account-button:hover {
-  background-color: #66cc33
+.add-account-button:hover,
+.login-container button:hover {
+  background-color: #72e937;
 }
 
-.delete-button:hover {
+button#close-popup-btn:hover,
+.delete-button:hover,
+.logout-button:hover,
+.cron-feed-addresses button {
   background-color: #c9302c;
 }
 
+button#add-account-btn:hover,
 .generate-button:hover {
   background-color: #286090;
 }
@@ -209,9 +198,18 @@ textarea {
   background-color: #ec971f;
 }
 
+button#add-account-btn {
+  margin-left: 40%;
+  margin-right: 40%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 20%;
+}
+
 .cron-feed-addresses {
   padding: 10px;
   border-top: 2px solid #66cc33;
+  height: 150px;
 }
 
 .statuses {
@@ -223,7 +221,7 @@ textarea {
   list-style-type: none;
   padding: 0;
   flex: 0 0 50%;
-  max-height: 450px;
+  height: 480px;
   overflow-x: overlay;
 }
 
@@ -258,9 +256,22 @@ footer {
   .account-wrapper {
     flex-direction: column;
   }
+
   .account-box {
     width: 100%;
     flex: unset;
     margin: 0;
+    max-height: unset;
+  }
+
+  .logo img {
+    height: auto;
+    width: 200px;
+  }
+
+  button#add-account-btn {
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 95%;
   }
 }
