--- a/root/public/assets/styles.css
+++ b/root/public/assets/styles.css
@@ -1,40 +1,29 @@
+/* Global Styles */
 body {
-  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   width: 100%;
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
   background-image: url(/assets/background-marble.png);
   background-repeat: repeat;
-  background-color: #f0f0f0;
 }
 
+/* Logo Styles */
 .logo img {
+  width: 300px;
   height: auto;
-  width: 350px;
 }
 
-.account-popup {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  background-color: #ffffff;
-  border-radius: 4px;
-  z-index: 1000;
-}
-
-/* Login Page */
+/* Login Page Styles */
 .login-container {
   width: 300px;
   margin: 100px auto;
   padding: 30px;
+  border-radius: 4px;
   background-color: #ffffff;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
 }
 
 .login-container h1 {
@@ -46,20 +35,74 @@ body {
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
-  border: 1px solid #ccc;
   border-radius: 4px;
+  border: 1px solid #ccc;
 }
 
 .error-message {
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 4px;
   color: #a94442;
   background-color: #f2dede;
-  padding: 10px;
   border: 1px solid #ebccd1;
-  border-radius: 4px;
-  margin-bottom: 20px;
 }
 
-/* Index Page */
+/* Add Account Styles */
+
+.add-account-popup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  border-radius: 4px;
+}
+
+
+.add-account-box {
+  flex-wrap: wrap;
+  position: relative;
+  margin: 5px;
+  border-radius: 4px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+}
+
+.add-account-form {
+  padding: 20px;
+}
+
+/* Update Account Styles */
+.update-account-popup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  border-radius: 4px;
+}
+
+.update-account-box {
+  flex-wrap: wrap;
+  position: relative;
+  margin: 5px;
+  border-radius: 4px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+}
+
+.update-account-form {
+  padding: 20px;
+}
+
+/* Index Page Styles */
 header {
   display: flex;
   justify-content: space-between;
@@ -67,70 +110,55 @@ header {
   padding: 10px 20px;
   background-color: #0366d6;
   color: #ffffff;
+  border-bottom: 2px solid #66cc33;
 }
 
 .container {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
-  min-height: 90vh;
-}
-
-.account-wrapper {
-  display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  min-height: 750px;
 }
 
 .account-box {
-  background-color: #ffffff;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
-  margin: 20px;
-  max-height: 750px;
-  position: relative;
   flex-wrap: wrap;
+  margin: 20px;
   flex: 0 0 calc(50% - 40px);
+  border-radius: 4px;
+  border-bottom: 2px solid #66cc33;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
 }
 
-.update-form {
-  display: flex;
-  flex-direction: column;
-  flex: 0 0 calc(25% - 10px);
-  padding: 10px;
-  background-color: #ccc;
-  min-height: 650px;
-  border: 1px solid #66cc33;
+.account-options {
+  display: inline-flex;
 }
 
-.create-account-form {
-  display: flex;
-  flex-direction: column;
-  flex: 0 0 50%;
-  padding: 10px;
+.account-options button {
+  margin: 0 10px 20px 20px;
 }
 
-input {
-  border: 1px solid #66cc33;
-  padding: 8px 6px;
-}
-
-.update-form label,
-.update-form input,
-.update-form textarea,
-.create-account-form label,
-.create-account-form input,
-.create-account-form textarea {
+.update-account-form label,
+.update-account-form input,
+.update-account-form textarea,
+.add-account-form label,
+.add-account-form input,
+.add-account-form textarea {
   display: block;
   margin-bottom: 20px;
   width: 95%;
 }
 
 textarea {
-  height: 350px;
-  border: 1px solid #66cc33;
   padding: 8px 6px;
+  border: 1px solid #66cc33;
+}
+
+input,
+button {
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #66cc33;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 button {
@@ -154,48 +182,10 @@ button:hover {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.update-button,
+.update-account-btn,
 .add-account-button,
 .login-container button {
   background-color: #66cc33;
-}
-
-button#close-popup-btn,
-.delete-button,
-.cron-feed-addresses button,
-.logout-button button {
-  background-color: #d9534f;
-}
-
-button#add-account-btn,
-.generate-button {
-  background-color: #337ab7;
-}
-
-.delete-status-button {
-  background-color: #f0ad4e;
-}
-
-.update-button:hover,
-.add-account-button:hover,
-.login-container button:hover {
-  background-color: #72e937;
-}
-
-button#close-popup-btn:hover,
-.delete-button:hover,
-.logout-button:hover,
-.cron-feed-addresses button {
-  background-color: #c9302c;
-}
-
-button#add-account-btn:hover,
-.generate-button:hover {
-  background-color: #286090;
-}
-
-.delete-status-button:hover {
-  background-color: #ec971f;
 }
 
 button#add-account-btn {
@@ -206,23 +196,67 @@ button#add-account-btn {
   width: 20%;
 }
 
+button#close-add-popup-btn,
+.delete-account-btn,
+.trigger-cron,
+.logout-button button {
+  background-color: #d9534f;
+}
+
+button#add-account-btn,
+.generate-button {
+  background-color: #0366d6;
+}
+
+.delete-status-button,
+.close-update-popup-btn {
+  background-color: #f0ad4e;
+}
+
+.update-account-btn:hover,
+.add-account-button:hover,
+.login-container button:hover {
+  background-color: #72e937;
+}
+
+button#close-add-popup-btn:hover,
+.delete-account-btn:hover,
+.logout-button:hover,
+.trigger-cron:hover {
+  background-color: #c9302c;
+}
+
+button#add-account-btn:hover,
+.generate-button:hover {
+  background-color: #286090;
+}
+
+.delete-status-button:hover,
+.close-update-popup-btn:hover {
+  background-color: #ec971f;
+}
+
 .cron-feed-addresses {
   padding: 10px;
   border-top: 2px solid #66cc33;
-  height: 150px;
+}
+
+.cron-feed-addresses>p {
+  float: left;
+  margin: 0 10px 20px 10px;
 }
 
 .statuses {
-  flex: 0 0 calc(70%);
   padding: 10px;
+  flex: 0 0 calc(70%);
+  height: 400px;
+  overflow-x: overlay;
 }
 
 .statuses ul {
   list-style-type: none;
   padding: 0;
   flex: 0 0 50%;
-  height: 480px;
-  overflow-x: overlay;
 }
 
 .statuses li {
@@ -230,24 +264,28 @@ button#add-account-btn {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #f0f0f0;
   margin-bottom: 10px;
   border-radius: 4px;
+  background-color: #f0f0f0;
 }
 
 footer {
+  padding: 10px 20px;
+  margin-top: 20px;
   background-color: #66cc33;
   color: #ffffff;
-  padding: 10px 20px;
   text-align: center;
-  margin-top: 20px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .footer-text {
   margin: 0;
 }
 
-/* Add these styles to make account boxes display in two columns on desktop */
+/* Responsive Styles */
 @media (max-width: 768px) {
   .container {
     justify-content: center;
@@ -261,17 +299,14 @@ footer {
     width: 100%;
     flex: unset;
     margin: 0;
-    max-height: unset;
   }
 
   .logo img {
-    height: auto;
     width: 200px;
   }
 
   button#add-account-btn {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 10px;
     width: 95%;
   }
 }
