--- a/root/public/assets/styles.css
+++ b/root/public/assets/styles.css
@@ -148,9 +148,19 @@ header {
   width: 95%;
 }
 
+.hashtags label,
+.hashtags input {
+  display: inline-flex;
+  width: unset;
+}
+
 textarea {
   padding: 8px 6px;
+  border-radius: 4px;
   border: 1px solid #66cc33;
+  border: 1px solid #66cc33;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  height: 100px;
 }
 
 input,
@@ -191,6 +201,8 @@ button:hover {
 button#add-account-btn {
   margin-left: 40%;
   margin-right: 40%;
+  margin-top: 60px;
+  margin-bottom: 140px;
   padding-top: 20px;
   padding-bottom: 20px;
   width: 20%;
