--- a/root/public/assets/css/styles.css
+++ b/root/public/assets/css/styles.css
@@ -1,182 +1,31 @@
-/* Global Styles */
+/* ================================================
+    GLOBAL STYLES
+================================================ */
 body {
   margin: 0 0 70px 0;
   padding: 0;
   overflow-x: hidden;
   width: 100%;
   font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-  background-image: url(/assets/images/background-marble.png);
-  background-repeat: repeat;
+  background: #f0f0f0 url(/assets/images/background-marble.png) repeat;
 }
 
-/* Logo Styles */
-.logo img {
-  width: 300px;
-  height: auto;
-}
-
-/* Index Page Styles */
-header {
+header,
+footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
+  color: #ffffff;
+}
+
+header {
   background-color: #0366d6;
-  color: #ffffff;
   border-bottom: 2px solid #66cc33;
 }
 
-/* image mgmt */
-.images-list {
-  display: flex;
-  flex-wrap: wrap;
-  border: 2px solid #66cc33;
-  overflow-y: hidden;
-  overflow-x: hidden;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.image-item {
-  width: 33.33%;
-  height: 200px;
-  border: 1px solid #66cc33;
-  box-sizing: border-box;
-}
-
-.image-item img {
-  width: 100%;
-  height: 200px;
-}
-
-.no-images {
-  margin: 20px;
-  font-size: 2dropem;
-}
-
-.delete-form {
-  position: relative;
-  bottom: 55px;
-  left: 10px;
-}
-
-/* Status mgmt */
-.account-box {
-  background-color: #ffffff;
-  min-height: calc(100% - 85px);
-  border-radius: 20px 20px 4px 4px;
-  border-bottom: 2px solid #66cc33;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.statuses {
-  padding: 10px;
-  max-width: 100%;
-  overflow-x: overlay;
-}
-
-.statuses ul {
-  list-style-type: none;
-  padding: 0;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.statuses li {
-  display: flex;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 4px;
-  background-color: #f0f0f0;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 20%;
-  border: 2px solid #66cc33;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.status-image {
-  width: calc(100% + 20px);
-  height: 249px;
-  margin: -10px 10px 10px -10px;
-}
-
-.cron-feed-addresses > p {
-  margin: 0 10px 20px 10px;
-}
-
-/* Edit Accounts/Users */
-.edit-users-box,
-.edit-accounts-box,
-.edit-images-box {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  border-radius: 20px 20px 0 0;
-  background-color: #ffffff;
-  min-height: 100vh;
-}
-
-.edit-users-form,
-.edit-accounts-form {
-  width: 30%;
-  padding: 20px;
-}
-
-.edit-images-form {
-  width: 20%;
-  padding: 20px;
-}
-
-.edit-users-list,
-.edit-accounts-list {
-  width: 64%;
-  padding: 20px;
-}
-
-.edit-images-list {
-  width: 72%;
-  padding: 20px;
-}
-
-.user-item,
-.account-item {
-  min-width: 46%;
-  padding: 10px;
-  margin: 10px;
-  border: 1px solid #66cc33;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  float: left;
-}
-
-.user-item button,
-.account-item button {
-  float: left;
-  margin-right: 20px;
-}
-
-.account-details {
-display: inline-flex;
-padding: 10px;
-margin: 20px;
-border: 1px solid #66cc33;
-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-align-items: center;
-    width: 30%;
-    justify-content: space-between;
-}
-
-.account-details p {
-  margin-inline: 10px;
-}
-
-/* Footer */
 footer {
-  padding: 10px 20px;
   background-color: #66cc33;
-  color: #ffffff;
   text-align: center;
   position: fixed;
   bottom: 0;
@@ -185,86 +34,187 @@ footer {
   z-index: 99;
 }
 
-.footer-text {
-  margin: 0;
+.logo img {
+  width: 300px;
+  height: auto;
 }
 
-/* Responsive Styles */
-@media (max-width: 768px) {
-  body {
-    margin: 0 0 70px 0;
-  }
-  .statuses li {
-    width: 100%!important;
-  }
+.tabcontent {
+  border-top: none;
+  display: none;
+  margin-bottom: 70px;
+}
 
-  .status-image {
-    width: calc(100% + 20px) !important;
-    height: 200px !important;
-    margin: -10px -10px 10px -10px !important;
-  }
+.tab {
+  background-color: #f1f1f1;
+  margin-left: 15px;
+  margin-right: 15px;
+  display: flex;
+  overflow: hidden;
+}
 
-  .delete-status-form {
-    margin-top: 10px;
-  }
+.tab button {
+  background-color: transparent;
+  color: #66cc33;
+  border: none;
+  border-radius: 4px 4px 0 0;
+  cursor: pointer;
+  float: left;
+  font-size: 1em;
+  outline: none;
+  padding: 14px 16px;
+  transition: 0.3s;
+  box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.1);
+}
 
-  .account-box {
-    width: 100%;
-    flex: unset;
-    margin: 0;
-  }
+.tab button.active,
+.tab button:hover {
+  background-color: #ffffff;
+  box-shadow: unset;
+}
 
-  .logo img {
-    width: 200px;
-  }
+.myacct-popup,
+.support-popup,
+.myacct-overlay,
+.support-overlay {
+  display: none;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+}
 
-  input,
-  textarea {
-    width: 96% !important;
-  }
+.myacct-popup,
+.support-popup {
+  width: 700px;
+  height: calc(100vh - 85px);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+  border: 2px solid #66cc33;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+  z-index: 10001;
+}
 
-  select {
-    width: 100% !important;
-  }
+.support-popup iframe {
+  height: calc(100vh - 85px);
+  width: 700px;
+}
 
-.account-details {
-  width: 90%;
-  flex-direction: column;
+.myacct-closeButton,
+.support-closeButton {
+  position: absolute;
+  right: 60px;
+  top: 10px;
+  cursor: pointer;
+  font-size: 2em;
+}
 
-  }
+.supportButton,
+.myacctButton {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #3066d6;
+  color: white;
+  text-align: center;
+  line-height: 50px;
+  position: fixed;
+  cursor: pointer;
+  font-size: 24px;
+  z-index: 10000;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 
-  .edit-users-form,
-  .edit-accounts-form,
-  .edit-images-form,
-  .edit-users-list,
-  .edit-accounts-list,
-  .edit-images-list {
-    max-width: 100% !important;
-    width: 90% !important;
-  }
+.supportButton {
+  bottom: 50px;
+  right: 20px;
+}
 
-  .image-item {
-    width: 100%;
-  }
+.myacctButton {
+  bottom: 50px;
+  right: 80px;
+}
 
-  .pagination {
-    display: flex;
-    justify-content: flex-start;
-    margin-top: 20px;
-    flex-wrap: wrap;
-    flex-direction: row;
-  }
+.myacct-overlay,
+.support-overlay {
+  background: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+}
 
-  .pagination a {
-    margin: 5px 5px;
-  }
+.green-button,
+.red-button,
+.orange-button,
+button {
+  background-color: #66cc33;
+  color: #fff;
+  border: none;
+  font-size: 18px;
+  padding: 10px 20px;
+  border-radius: 4px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+  transition: box-shadow 0.3s;
+}
 
-  .dropzone {
-    width: 100%!important;
-  }
+.green-button:hover {
+  background-color: #5cbf2a;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
-  .user-item,
-  .account-item {
-    width: 90%;
-  }
+.red-button {
+  background-color: #c9302c;
+}
+
+.red-button:hover {
+  background-color: #d9534f;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.orange-button {
+  background-color: #ec971f;
+}
+
+.orange-button:hover {
+  background-color: #f0ad4e;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+button {
+  background-color: #0366d6;
+}
+
+button:hover {
+  background-color: #3478d9;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+textarea,
+select,
+input[type="text" i],
+input[type="password" i] {
+  display: block;
+  padding: 8px 6px;
+  margin-bottom: 20px;
+  border-radius: 4px;
+  width: 97%;
+  border: 1px solid #66cc33;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+select {
+  width: 100% !important;
+}
+
+textarea {
+  height: 100px;
+}
+
+.footer-text {
+  margin: 0;
 }
