--- a/root/public/assets/css/login.css
+++ b/root/public/assets/css/login.css
@@ -1,3 +1,6 @@
+/* ================================================
+    LOGIN STYLES
+================================================ */
 body {
   margin: 0;
   padding: 0;
@@ -6,62 +9,46 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f0f0f0;
-  background-image: url(/assets/images/background-marble.png);
-  background-repeat: repeat;
+  background: #f0f0f0 url(/assets/images/background-marble.png) repeat;
 }
 
 /* Login Page Styles */
-.login-container {
+.login-container,
+.login-box {
   width: 300px;
-  margin: 100px auto;
   padding: 30px;
   border-radius: 4px;
   background-color: #ffffff;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.login-container h1 {
-  margin-bottom: 20px;
   text-align: center;
-}
-
-.login-container form input {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
 }
 
 .login-box {
   width: 400px;
-  padding: 20px;
   border: 2px solid #66cc33;
-  background-color: #ffffff;
-  border-radius: 5px;
   box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 0.47);
-  text-align: center;
 }
 
-.login-box form {
-  text-align: left;
+.login-container h1,
+.logo {
+  margin-bottom: 20px;
 }
 
-input[type="text"] {
-  width: 100%;
-  padding: 5px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
+.login-container form input,
+input[type="text"],
 input[type="password"] {
   width: 100%;
-  padding: 5px;
-  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
   border: 1px solid #ccc;
+  border-radius: 4px;
   box-sizing: border-box;
+}
+
+.error-message {
+  color: #ff0000;
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
 input[type="submit"] {
@@ -77,26 +64,17 @@ input[type="submit"]:hover {
   background-color: #66cc33;
 }
 
-.error-message {
-  color: #ff0000;
-  padding: 10px;
-  margin-bottom: 10px;
-}
-
-/* Style the logo */
+/* Logo Styles */
 .logo {
   width: 300px;
   height: 60px;
-  margin-bottom: 20px;
 }
 
 @media (max-width: 600px) {
-  /* Reduce the width of the login box for smaller screens */
   .login-box {
     width: 80%;
   }
 
-  /* Adjust the logo size for smaller screens */
   .logo {
     width: 60%;
     height: auto;
