--- a/root/public/assets/css/login.css
+++ b/root/public/assets/css/login.css
@@ -1,82 +1,81 @@
-/* ================================================
-    LOGIN STYLES
-================================================ */
+html,
 body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #f0f0f0 url(/assets/images/background-marble.png) repeat;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
-/* Login Page Styles */
-.login-container,
-.login-box {
-  width: 300px;
-  padding: 30px;
-  border-radius: 4px;
-  background-color: #ffffff;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  text-align: center;
+body {
+    align-items: center;
+    background-color: #f1f1f1;
+    background-image: url("/assets/images/background.png");
+    background-repeat: repeat;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
-.login-box {
-  width: 400px;
-  border: 2px solid #66cc33;
-  box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 0.47);
-}
-
-.login-container h1,
 .logo {
-  margin-bottom: 20px;
+    height: 60px;
+    margin-bottom: 20px;
+    width: 300px;
 }
 
-.login-container form input,
+.login-box {
+    background-color: #ffffff;
+    border: 2px solid #66cc33;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    padding: 20px;
+    text-align: center;
+    width: 400px;
+}
+
+.login-box form {
+    text-align: left;
+}
+
 input[type="text"],
 input[type="password"] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-.error-message {
-  color: #ff0000;
-  padding: 10px;
-  margin-bottom: 10px;
+    border: 1px solid #66cc33;
+    border-radius: 5px;
+    box-sizing: border-box;
+    padding: 5px;
+    width: 100%;
 }
 
 input[type="submit"] {
-  background-color: #66cc33;
-  color: white;
-  padding: 8px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+    background-color: #66cc33;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    padding: 8px 20px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 input[type="submit"]:hover {
-  background-color: #66cc33;
+    background-color: #3e8e41;
+    box-shadow: rgba(0, 0, 0, 0.1) 1.95px 1.95px 2.6px;
 }
 
-/* Logo Styles */
-.logo {
-  width: 300px;
-  height: 60px;
+#error-msg {
+    color: #ff0000;
+    margin-bottom: 10px;
+    padding: 10px;
 }
 
 @media (max-width: 600px) {
-  .login-box {
-    width: 80%;
-  }
 
-  .logo {
-    width: 60%;
-    height: auto;
-  }
+    /* Adjust the logo size for smaller screens */
+    .logo {
+        height: auto;
+        width: 60%;
+    }
+
+    /* Reduce the width of the login box for smaller screens */
+    .login-box {
+        width: 80%;
+    }
 }
