--- a/root/public/assets/css/styles.css
+++ b/root/public/assets/css/styles.css
@@ -73,8 +73,6 @@ footer {
   box-shadow: unset;
 }
 
-.myacct-popup,
-.support-popup,
 .myacct-overlay,
 .support-overlay {
   display: none;
@@ -88,6 +86,8 @@ footer {
 
 .myacct-popup,
 .support-popup {
+  display: none;
+  position: fixed;
   width: 700px;
   height: calc(100vh - 85px);
   top: 50%;
@@ -100,7 +100,6 @@ footer {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
   z-index: 10001;
 }
-
 .support-popup iframe {
   height: calc(100vh - 85px);
   width: 700px;
