--- a/root/public/assets/css/pages.css
+++ b/root/public/assets/css/pages.css
@@ -12,12 +12,14 @@
 .statuses {
   padding: 10px;
   max-width: 100%;
+  overflow-x: overlay;
 }
 
 .statuses ul {
   list-style-type: none;
   padding: 0;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
 }
@@ -32,10 +34,11 @@
   justify-content: space-between;
   width: 20%;
   border: 2px solid #66cc33;
-  box-shadow: inherit;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .status-text {
+  overflow-x: overlay;
   height: 250px;
 }
 
@@ -43,51 +46,61 @@
   width: calc(100% + 20px);
   height: 220px;
   margin: -10px 10px 10px -10px;
+  overflow-x: hidden;
 }
 
 .delete-status-button {
   width: 100%;
-  margin: 20px 0;
+  margin: 20px 0 10px 0;
 }
 
 .share-buttons {
-  display: flex;
-  background-color: aliceblue;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  margin: 0 -10px;
-  padding: 10px;
-  border-top: 2px solid #66cc33;
-  border-bottom: inherit;
+display: flex;
+background-color:aliceblue;
+flex-wrap: wrap;
+flex-direction: row;
+justify-content: space-around;
+margin: 0 -10px 0 -10px;
+padding: 10px;
+border-top: 2px solid #66cc33;
+border-bottom: 2px solid #66cc33;
+
 }
 
 .share-buttons svg {
   -webkit-filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.3));
-  filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.3));
+          filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.3));
   transition: -webkit-filter 0.3s ease-in-out;
   transition: filter 0.3s ease-in-out;
+  transition: filter 0.3s ease-in-out, -webkit-filter 0.3s ease-in-out;
 }
 
 .share-buttons svg:hover {
   -webkit-filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.1));
-  filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.1));
+          filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.1));
 }
 
 .cron-feed-addresses {
   padding-top: 20px;
   border-top: 2px solid #66cc33;
-  border-bottom: inherit;
+  border-bottom: 2px solid #66cc33;
   width: 100%;
 }
 
-.cron-feed-addresses>p {
-  margin: 0 10px 20px;
+.cron-feed-addresses > p {
+  margin: 0 10px 20px 10px;
 }
+
+/* ================================================
+    GALLERY PAGE STYLES
+================================================ */
 
 .images-list {
   display: flex;
   flex-wrap: wrap;
   border: 2px solid #66cc33;
+  overflow-y: hidden;
+  overflow-x: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -100,12 +113,12 @@
 
 .image-item img {
   width: 100%;
-  height: 100%;
+  height: 225px;
 }
 
 .no-images {
   margin: 20px;
-  font-size: 2em;
+  font-size: 2dropem;
 }
 
 .delete-image {
@@ -114,28 +127,33 @@
   left: 10px;
 }
 
-#account_selection_form>select {
+#account_selection_form > select {
   border: 1px solid #66cc33;
 }
 
 .dropzone {
-  min-height: 304px !important;
-  border: 2px solid #66cc33 !important;
-  background: white !important;
-  padding: 20px !important;
+  min-height: 304px!important;
+  border: 2px solid #66cc33!important;
+  background: white!important;
+  padding: 20px 20px!important;
   margin-bottom: 20px;
-  box-shadow: inherit;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   width: 100%;
+  overflow-y: overlay;
   max-height: 400px;
 }
 
+.dropzone .dz-message {
+  margin-top: 60px;
+}
+
 .dz-button {
-  box-shadow: none;
+  box-shadow: unset;
 }
 
 .dropzone .dz-preview .dz-image {
-  width: 100px !important;
-  height: 100px !important;
+  width: 100px!important;
+  height: 100px!important;
 }
 
 .pagination {
@@ -150,15 +168,17 @@
   margin: 0 5px;
   background-color: #66cc33;
   color: #fff;
+  border: none;
   font-size: 18px;
   padding: 10px 20px;
   border-radius: 4px;
-  box-shadow: inherit;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s;
 }
 
 .pagination a.active {
   background-color: #333;
+  color: #fff;
 }
 
 .pagination a:hover {
@@ -166,7 +186,12 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-.edit-box {
+/* ================================================
+    ACCOUNT/USER/GALLERY EDITING STYLES
+================================================ */
+.edit-users-box,
+.edit-accounts-box,
+.edit-images-box {
   display: flex;
   flex-direction: row;
   border-radius: 20px 20px 0 0;
@@ -174,17 +199,22 @@
   min-height: 100vh;
 }
 
-.edit-form {
+.edit-users-form,
+.edit-accounts-form,
+.edit-images-form {
   width: 25%;
   padding: 20px;
   background-color: #d6d6d6;
 }
 
-.edit-list {
+.edit-users-list,
+.edit-accounts-list,
+.edit-images-list {
   width: 75%;
 }
 
-.item {
+.user-item,
+.account-item {
   min-width: 30%;
   padding: 10px;
   margin: 10px;
@@ -194,7 +224,8 @@
   float: left;
 }
 
-.item button {
+.user-item button,
+.account-item button {
   float: left;
   margin-right: 20px;
 }
@@ -214,7 +245,7 @@
   padding: 10px;
   margin-top: 39px;
   border: 1px solid #66cc33;
-  box-shadow: inherit;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   align-items: center;
   justify-content: space-between;
 }
