--- a/root/public/assets/css/mobile.css
+++ b/root/public/assets/css/mobile.css
@@ -1,5 +1,5 @@
 /* ================================================
-    RESPONSIVE STYLES
+   MOBILE RESPONSIVE STYLES
 ================================================ */
 @media (max-width: 768px) {
   /* General Styles */
@@ -102,5 +102,14 @@
 
   .pagination a {
     margin: 5px 5px;
+  }
+}
+
+/* ================================================
+   TABLET RESPONSIVE STYLES
+================================================ */
+@media (min-width: 769px) and (max-width: 1200px) {
+.statuses li {
+    width: 30%;
   }
 }
